group 'Gradle'
version '1.0-SNAPSHOT'

apply plugin: 'java'
apply plugin: 'application'
apply plugin: 'jacoco'

sourceCompatibility = 1.8

mainClassName = 'Main'

repositories {
    mavenCentral()
}

buildscript {
  repositories {
    maven {
      url "https://plugins.gradle.org/m2/"
    }
  }
  dependencies {
    classpath "gradle.plugin.com.zoltu.gradle.plugin:git-versioning:3.0.3"
  }
}

apply plugin: "com.zoltu.git-versioning"

dependencies {
    testCompile 'junit:junit:4.12'
}

//compileJava {
//    sourceCompatibility = '9'
//    targetCompatibility = '9'
//    options.with {
//        fork = true
//        forkOptions.javaHome = new File('/usr/lib/jvm/java-9-oracle/')
//        compilerArgs.addAll(['--add-exports', 'jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED'])
//    }
//}

sourceSets {
    main {
        java.srcDir("src/java")
        resources.srcDir("src/resources")
    }
    test {
        java.srcDir("src/test")
    }
}



//Junit4

//Junit4

//Coverage

jacocoTestReport {
    group = "Reporting"
    description = "Generate Jacoco coverage reports after running tests."
    additionalSourceDirs = files(sourceSets.main.allJava.srcDirs)
}
